# kekrna

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.py  main.cpp
docs/thesis/: .gitignore  cshonours.cls  honours.bib  recurrence.txt  thesis.tex
scripts/: common.py  compute_energy.py  convert.py  crop.py  extract_subsequence.py  kekvault.py  parse_data.py  rna.py  run.py  run_fuzz.py  scrape.py  test.py  test_perf.py  test_subopt.py
scripts/plot/: fold_accuracy.py  fold_performance.py  load_data.py  plot_common.py  run.py  subopt_performance.py
src/: argparse.cpp  argparse.h  array.h  base.cpp  base.h  common.cpp  common.h  constants.h  context.cpp  context.h  energy.cpp  energy.h  fold.cpp  fold.h  globals.cpp  globals.h  main.cpp  minmaxheap.h  parsing.cpp  parsing.h  splaymap.h  structure.cpp  structure.h
src/bridge/: bridge.cpp  bridge.h  kekrna.cpp  kekrna.h  rnastructure.cpp  rnastructure.h
src/energy/: ctds.cpp  ctds.h  energy.cpp  energy.h  energy_globals.cpp  energy_globals.h  energy_internal.cpp  energy_internal.h  energy_model.cpp  energy_model.h  fast_energy.cpp  fast_energy.h  load_model.cpp  load_model.h  structure.cpp  structure.h
src/fold/: brute_fold.cpp  brute_fold.h  context.cpp  context.h  fold.cpp  fold.h  fold0.cpp  fold1.cpp  fold1.h  fold2.cpp  fold2.h  fold3.cpp  fold3.h  fold4.cpp  fold4.h  fold_constants.h  fold_globals.cpp  fold_globals.h  fold_internal.cpp  fold_internal.h  globals.cpp  globals.h  precomp.cpp  precomp.h  slow_fold.cpp  slow_fold.h  suboptimal.cpp  suboptimal.h  suboptimal0.cpp  suboptimal0.h  suboptimal1.cpp  suboptimal1.h  suboptimal1_base.cpp  suboptimal1_base.h  suboptimal1_delta.cpp  suboptimal1_delta.h  suboptimal1_num.cpp  suboptimal1_num.h  suboptimal2.cpp  suboptimal2.h  (+2 more)
src/partition/: exterior.cpp  internal.cpp  partition.h  partition0.cpp  partition1.cpp  partition_globals.cpp  partition_globals.h  probability.cpp
src/programs/: batch_energy.cpp  brute_fold.cpp  compute_energy.cpp  efn.cpp  explain_fold.cpp  fold.cpp  fuzz.cpp  harness.cpp  partition.cpp  subopt.cpp
tests/: base_test.cpp  brute_test.cpp  common_test.cpp  common_test.h  ctds_test.cpp  ctds_test.h  energy_test.cpp  fold_test.cpp  main.cpp  minmaxheap_test.cpp  parsing_test.cpp  splaymap_test.cpp
tests/programs/: run_tests.cpp  splay_explorer.cpp
